Update HTML for second layout with complete structure

--- a/layout-1/layout-1.html
+++ b/layout-1/layout-1.html
@@ -17,7 +17,7 @@
                 <p class="formBox__text">Fill the form so that our team can reach out to you</p>
             </div>
 
-            <form class="formBox__form">
+            <form action="#" class="formBox__form">
                 <input class="formBox__input" type="text" name="name" id="name" placeholder="Name" required>
                 <input class="formBox__input" type="email" name="email" id="email" placeholder="Email" required>
                 <input class="formBox__input formBox__input--phone" type="tel" name="phone" id="phone" placeholder="Phone Number" required>
