--- a/layout-2/layout-2.html
+++ b/layout-2/layout-2.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./layout-2.css">
-    <title>layout-2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <section class="contact">
             
             <div class="contact__image-container">
-                <!-- <img src="../images/layout-2.jpg" alt="" class="contact__image"> -->
+                <img src="../images/layout-2.jpg" alt="" class="contact__image">
             </div>
 
             <section class="contact__form-section">
 
                 <div class="contact__header">
-                    <h1 class="contact__title">Contact US</h1>
+                    <h1 class="contact__title">Contact Us</h1>
                 </div>
 
                 <div class="contact__content">
@@ -41,19 +43,13 @@
     
                         <div class="contact__social-links">
                             <a href="#" class="contact__social-link" aria-label="Facebook">
-                                <svg aria-hidden="true" focusable="false" class="contact__social-icon">
-                                <!-- Icono Facebook -->
-                                </svg>
+                                <img src="../images/facebook-icon.svg" alt="Facebook" class="contact__social-icon">
                             </a>
                             <a href="#" class="contact__social-link" aria-label="Instagram">
-                                <svg aria-hidden="true" focusable="false" class="contact__social-icon">
-                                <!-- Icono Instagram -->
-                                </svg>
+                                <img src="../images/instagram-icon.png" alt="Instagram" class="contact__social-icon">
                             </a>
                             <a href="#" class="contact__social-link" aria-label="Twitter">
-                                <svg aria-hidden="true" focusable="false" class="contact__social-icon">
-                                <!-- Icono Twitter -->
-                                </svg>
+                                <img src="../images/twitter-icon.svg" alt="Twitter" class="contact__social-icon">
                             </a>
                         </div>
                     </adress>
