Update HTML and CSS with structure and all styles for the fourth layout

--- a/layout-3/layout-3.html
+++ b/layout-3/layout-3.html
@@ -27,7 +27,7 @@
                 <!-- ----- Email ----- -->
                 <div class="appointment__email-container">
                     <label class="appointment__label" for="">Email</label>
-                    <input class="appointment__input appointment__input--email" type="text" name="" id="" placeholder="eg: john@email.com" aria-label="Email">
+                    <input class="appointment__input appointment__input--email" type="email" name="" id="" placeholder="eg: john@email.com" aria-label="Email">
                 </div>
     
                 <!-- ----- Phone Number ----- -->
